[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/mainmenu/mainmenu.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/submenus/settings/settings.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/mainmenu/playgame/playgame.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/common/fonts/title-font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/common/fonts/menufont.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/common/themes/iso_dark.theme" type="Theme" id=7]

[node name="TitleScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )
custom_constants/margin_right = 64
custom_constants/margin_top = 64
custom_constants/margin_left = 64
custom_constants/margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 64.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 536.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 896.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 208 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 255.0
margin_top = 61.0
margin_right = 640.0
margin_bottom = 147.0
custom_fonts/font = ExtResource( 5 )
text = "OpenSuspect"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 212.0
margin_right = 896.0
margin_bottom = 472.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_left = 64

[node name="MenuArea" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 64.0
margin_top = 15.0
margin_right = 832.0
margin_bottom = 245.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 64
custom_constants/margin_left = 64
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="VBoxContainer" parent="VBoxContainer/MarginContainer/MenuArea"]
margin_left = 64.0
margin_top = 15.0
margin_right = 704.0
margin_bottom = 215.0
size_flags_vertical = 3
custom_constants/separation = 50

[node name="Control" type="Control" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu"]
margin_right = 640.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayGame" type="Button" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control/CenterContainer"]
margin_left = 294.0
margin_right = 346.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 6 )
text = "PLAY"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu"]
margin_top = 50.0
margin_right = 640.0
margin_bottom = 50.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Appearence" type="Button" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control2/CenterContainer"]
margin_left = 263.0
margin_right = 377.0
margin_bottom = 34.0
text = "APPEARANCE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control4" type="Control" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu"]
margin_top = 100.0
margin_right = 640.0
margin_bottom = 100.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control4"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loadpck" type="Button" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control4/CenterContainer"]
margin_left = 276.0
margin_right = 363.0
margin_bottom = 34.0
text = "LOAD PCK"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control3" type="Control" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu"]
margin_top = 150.0
margin_right = 640.0
margin_bottom = 150.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control3/CenterContainer"]
margin_left = 276.0
margin_right = 364.0
margin_bottom = 34.0
text = "SETTINGS"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control5" type="Control" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu"]
margin_top = 200.0
margin_right = 640.0
margin_bottom = 200.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control5"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control5/CenterContainer"]
margin_left = 295.0
margin_right = 344.0
margin_bottom = 34.0
text = "QUIT"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppearenceEditor" type="HBoxContainer" parent="VBoxContainer/MarginContainer/MenuArea"]
visible = false
margin_left = 64.0
margin_top = 15.0
margin_right = 704.0
margin_bottom = 215.0

[node name="Settings" parent="VBoxContainer/MarginContainer/MenuArea" instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 15.0
margin_right = 704.0
margin_bottom = 215.0

[node name="VBoxContainer" parent="VBoxContainer/MarginContainer/MenuArea/Settings/Settings" index="0"]
margin_right = 640.0

[node name="PlayGame" parent="VBoxContainer/MarginContainer/MenuArea" instance=ExtResource( 4 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 15.0
margin_right = 704.0
margin_bottom = 215.0
[connection signal="returnToMainMenu" from="VBoxContainer/MarginContainer/MenuArea" to="VBoxContainer/MarginContainer/MenuArea" method="_on_MenuArea_returnToMainMenu"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control/CenterContainer/PlayGame" to="VBoxContainer/MarginContainer/MenuArea" method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control4/CenterContainer/loadpck" to="VBoxContainer/MarginContainer/MenuArea" method="_on_loadpck_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control3/CenterContainer/Settings" to="VBoxContainer/MarginContainer/MenuArea" method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/MenuArea/MainMenu/Control5/CenterContainer/Quit" to="VBoxContainer/MarginContainer/MenuArea" method="_on_Quit_pressed"]

[editable path="VBoxContainer/MarginContainer/MenuArea/Settings"]
